kubernetes/jaeger/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-operator
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jaeger-operator
  template:
    metadata:
      labels:
        name: jaeger-operator
    spec:
      serviceAccountName: jaeger-operator
      containers:
        - name: jaeger-operator
          image: jaegertracing/jaeger-operator:1.21.2
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
          - containerPort: 8383
            name: http-metrics
          - containerPort: 8686
            name: cr-metrics
          args: ["start", "--log-level=debug"]
          imagePullPolicy: Always
